# reddit_search

./: .gitignore  README.md  Steps.txt  main.py  pyproject.toml  requirements.txt
Frontend /: practice.py  rag_chat_app.py
Frontend /backup/: learning_streamlit.py  rag_chat_app.py
Search_Engine/: RAG.py  VD_Setup.py  search.ipynb  test.py
Search_Engine/backup/: RAG_Model.ipynb
llm_env/: pyvenv.cfg
qdrant_storage/: raft_state.json
